--- a/Sistema de Aluguel de Carros/Implementação/resources/application.properties
+++ b/Sistema de Aluguel de Carros/Implementação/resources/application.properties
@@ -3,10 +3,17 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+logging.level.root=INFO
+logging.level.org.springframework.security=DEBUG
+logging.level.br.com.demo.regescweb.controllers=DEBUG
+logging.level.org.springframework=DEBUG
+logging.level.br.com.demo.regescweb.controllers.PedidoController=DEBUG
+
+
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
-
